fixing navbar on mobile and js for scroll not 150 anymore but 20

--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -375,16 +375,10 @@ a {
 
 /* Mobile (fino a 767px) */
 @media screen and (max-width: 767px) {
-  body {
-    padding-top: 5rem; /* Spazio per la navbar fissa */
-  }
-  
-  .my-header {
-    padding: 1rem 0;
-  }
+ 
   
   .navbar {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
     gap: 1rem;
   }
@@ -393,11 +387,15 @@ a {
     flex-wrap: wrap;
     justify-content: center;
   }
+
+  .navbar-list-item:nth-of-type(1), .navbar-list-item:nth-of-type(2), .navbar-list-item:nth-of-type(3){
+    display: none;
+  }
   
   .hero-box {
     flex-direction: column;
-    align-items: center;
-    text-align: center;
+    align-items: flex-start;
+    text-align: left;
   }
   
   .hero-box-left {
@@ -406,10 +404,7 @@ a {
   }
   
   .hero-icon {
-    width: 18rem;
-    margin-left: 0;
-    order: 1;
-    margin-bottom: 2rem;
+   display: none;
   }
   
   .hero-title {
